--- a/contato.html
+++ b/contato.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contato</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Contato</li>
+                <li>FAQ</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
