--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
 </head>
 <body>
     <h1>Cursos feitos durante o processo de formação</h1>
+    <main>
+        <section>
+            <p>Noticia 1</p>
+            <p>Noticia 2</p>
+        </section>
+    </main>
+    <ul>
+        <li>Gestao Agil</li>
+        <li>Curso 4</li>
+        <li>Curso 5</li>
+        <li>Curso 6</li>
+        <li>Extra</li>
+    </ul>
 </body>
 </html>
