--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Cursos feitos durante o processo de formação</h1>
+    <ul>
+        <li>Gestao Agil</li>
+    </ul>
 </body>
 </html>
