--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Cursos feitos durante o processo de formação</h1>
+    <main>
+        <section>
+            <p>Noticia 1</p>
+            <p>Noticia 2</p>
+        </section>
+    </main>
 </body>
 </html>
