adição de numeros de contato

--- a/contato.html
+++ b/contato.html
@@ -15,5 +15,12 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <p>Numero 1</p>
+            <p>Numero 2</p>
+            <p>Numero 3</p>
+        </section>
+    </main>
 </body>
 </html>
