--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Cursos feitos durante o processo de formação</h1>
     <ul>
         <li>Gestao Agil</li>
+        <li>Azure</li>
     </ul>
 </body>
 </html>
