adição de mais numeros de contato

--- a/contato.html
+++ b/contato.html
@@ -20,6 +20,8 @@
             <p>Numero 1</p>
             <p>Numero 2</p>
             <p>Numero 3</p>
+            <p>Numero 4</p>
+            <p>numero 5</p>
         </section>
     </main>
 </body>
