adição de cursos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <ul>
         <li>Gestao Agil</li>
         <li>Azure</li>
-        <li>Git e GitHub</li>
+        <li>Git e GitHub Socorro meu deus</li>
+        <li>Curso 4</li>
+        <li>Curso 5</li>
+        <li>Curso 6</li>
+        <li>Extra</li>
     </ul>
 </body>
 </html>
